# transmus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  tests.yml
plans/: architecture.md
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_matcher.py  test_models.py
transmus/: __init__.py  __main__.py  cli.py  config.py  matcher.py  models.py  transfer.py
transmus/auth/: __init__.py  spotify_auth.py  youtube_auth.py
transmus/services/: __init__.py  spotify_service.py  youtube_music.py
