[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "transmus"
version = "0.1.0"
description = "Transfer music playlists between YouTube Music and Spotify"
readme = "README.md"
authors = [
    { name = "Transmus Contributors" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "ytmusicapi>=1.8",
    "spotipy>=2.24",
    "rapidfuzz>=3.9",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/raj-mohan/transmus"
Repository = "https://github.com/raj-mohan/transmus"
BugTracker = "https://github.com/raj-mohan/transmus/issues"

[project.scripts]
transmus = "transmus.cli:main"

[tool.setuptools.packages.find]
include = ["transmus*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]